# PBIRStoPBIOnlne

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  config.example.json  migrate.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: CODEOWNERS  agent-instructions.md  copilot-instructions.md
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  FAQ.md  GATEWAY_MAPPING_GUIDE.md  KNOWN_LIMITATIONS.md  MIGRATION_CHECKLIST.md  PAGINATED_REPORT_GUIDE.md  PBIX_UPLOAD_GUIDE.md  PERMISSION_MAPPING_GUIDE.md  ROADMAP.md
examples/: gateway_mapping.example.json  tenant_mapping.example.json
pbi_import/: __init__.py  ad_group_bridge.py  ad_group_provisioner.py  api_server.py  app_publisher.py  audience_bucketer.py  audit_logger.py  benchmark_harness.py  branding_migrator.py  cache_plan_migrator.py  calc_group_migrator.py  capability_report.py  catalog_stream.py  composite_model_planner.py  connection_mapping_csv.py  connection_transformer.py  content_hash.py  converter.py  cost_estimator.py  data_driven_converter.py  data_validator.py  dataset_publisher.py  datasource_consolidator.py  dax_auto_fixer.py  dax_health_checker.py  endorsement_manager.py  event_log.py  field_parameter_creator.py  gateway_autocreate.py  gateway_cluster.py  gateway_mapper.py  large_file_handler.py  linked_report_handler.py  metrics_exporter.py  migration_registry.py  migration_report.py  mobile_extractor.py  model_splitter.py  monitor_integration.py  multi_workspace.py  (+37 more)
pbirs_export/: __init__.py  api_client.py  assessment.py  batch_orchestrator.py  (+18 more)
(+88 files in other folders)
