[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbirs-to-pbi-online"
version = "1.7.0"
description = "Automated migration of Power BI Report Server content to Power BI Online (Service)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "PBI SME Team"}
]
keywords = ["power-bi", "report-server", "migration", "pbirs", "fabric"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = []

[project.optional-dependencies]
deploy = [
    "azure-identity>=1.15.0",
    "requests>=2.31.0",
    "requests-ntlm>=1.2.0",
    "msal>=1.28.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage>=7.4",
]

[project.scripts]
pbirs-migrate = "migrate:main"

[tool.setuptools.packages.find]
include = ["pbirs_export*", "pbi_import*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
